# Auto-Quant

./: .gitignore  README.md  README_zh.md  STRATEGY_MAP.md  _enrich_2026.py  _fix_config.py  _optimize_cbbi.py  _optimize_cycle.py  _parameter_optimizer.py  _patch07.py  _simulator.py  _simulator_cbbi.py  _validate_final_beater.py  claude-progress.md  claude-progress.txt  config.json  config_daily.json  config_futures.json  optimize_stability.py  optimize_stability_fast.py  prepare.py  prepare_ahr999.py  prepare_cbbi.py  prepare_val.py  program.md  pyproject.toml  results.tsv  run.py  run_adaptive_test.py  run_combo_test.py  run_daily.py  run_dynamic_sl.py  run_ensemble.py  run_fusion_test.py  run_futures_test.py  run_multi_tf.py  screen_cbbi_ahr.py  screen_cbbi_momentum.py  stress.py  val.py  (+6 more)
.tmp/: autoresearch_batch_round7.py  autoresearch_batch_round8.py  autoresearch_state_round7.json  autoresearch_state_round8.json
.tmp/archive/: autoresearch_batch.py  autoresearch_batch_round2.py  autoresearch_state.json  (+8 more)
autoq_data/: __init__.py  cycle_bridge.py  pipeline.py  sources.py  strategy_bridge.py  transforms.py
docs/: binance-aiodns-dns-failure.md
explore/: FINAL-SUMMARY.md  README.md  dynamic-stoploss-test.md  exploration-summary.md  robustness-report.md  stability-optimization-report.md  strategy-roadmap.md
tests/: test_factor_strategy_candidate.py  test_pipeline.py  test_runtime_config.py  test_sources.py  test_stoch_mean_rev.py  test_strategy_bridge.py  test_strategy_roster.py  test_stress_runner.py  test_transforms.py  test_val_runner.py
versions/: README.md
(+121 files in other folders)
